# DeepMindSynth

./: .gitignore  CMakeLists.txt  README.md
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
Source/DSP/Arpeggiator/: Arpeggiator.cpp  Arpeggiator.h
Source/DSP/Effects/: FxChain.cpp  FxChain.h
Source/DSP/Filters/: MultiFilter.cpp  MultiFilter.h
Source/DSP/Modulation/: ModMatrix.cpp  ModMatrix.h
Source/DSP/Oscillators/: DeepMindOsc.cpp  DeepMindOsc.h
Source/Data/: PresetManager.cpp  PresetManager.h  SysexTranslator.cpp  SysexTranslator.h
Source/GUI/: ArpEditor.h  DeepMindLookAndFeel.cpp  DeepMindLookAndFeel.h  FxEditor.h  ModMatrixEditor.h  OverlayComponent.h
Source/Voice/: SynthVoice.cpp  SynthVoice.h
